@@ -8,6 +8,7 @@
 * Fix: datetime filters now also are take into account when searching in GridPanel is performed
 * Fix: FieldsConfigurator should now work on Heroku
 * Fix: GridPanel date filter now should work
+* New: GridPanel now has a method on_data_changed that can be overridden by children to detect actions that modify data
 
 = v0.5.8 - 2010-03-12
 * Fix: GertThiel's method_missing-related fix enabling better compatibility with other Ruby libs
